--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -28,7 +28,7 @@
 .search-icon {
     width: 32px; 
     height: 32px;
-    background-image: url('C:\Users\stask\OneDrive\Рабочий стол\React App\poems\testtask\src\components\page\home\search.png');
+    background-image: url('C:\Users\stask\OneDrive\Рабочий стол\React App\Новая папка\testtask\src\components\page\home\search.png');
     background-size: cover;
     background-position: center;
     position: absolute;
