New component Paginate

--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -60,7 +60,7 @@
     color:#F17900;
 }
 .osg {
-    
+    color:#393939;
     text-align: center;
 }
 
@@ -96,17 +96,23 @@
         width: calc(50% - 20px);
     }
 }
-.pagination {
+.pagination{
     display: flex;
-    justify-content: center;
-    margin-top: 20px;
+    justify-content: flex-end; /* Выравнивание кнопок пагинации вправо */
+    margin-top: 30px;
+    margin-right: 120px;
 }
-
 .pagination button {
     margin: 0 5px;
     padding: 5px 10px;
-    background-color: #f17900;
-    color: #fff;
-    border: none;
+    background-color: #fff; /* Цвет фона не выбранной кнопки */
+    color: black; /* Цвет текста не выбранной кнопки */ 
+    border:none;
     cursor: pointer;
+}
+
+.pagination button.active {
+    background-color: #f17900; /* Цвет фона выбранной кнопки */
+    color: #fff; /* Цвет текста выбранной кнопки */
+    border: 1px solid #fff; /* Граница выбранной кнопки */
 }
