Add new style for favorite button

--- a/src/components/page/favorite/favorite.css
+++ b/src/components/page/favorite/favorite.css
@@ -6,11 +6,11 @@
 
 .list {
     text-align: center;
-    padding: 50px;
+    padding: 30px;
 }
 
 .favorites-image {
-    width: 20px; /* Adjust the width as needed */
+    width: 20px; 
 }
 
 .favorites-container {
@@ -23,15 +23,15 @@
 
 .favorite-artwork {
     margin: 10px;
-    width: calc(33.33% - 20px); /* Одна треть ширины с учетом отступов */
+    width: calc(33.33% - 20px);
     padding: 10px;
     box-sizing: border-box;
     text-align: center; 
 }
 
 .favorite-artwork img {
-    width: 80px; /* Ширина изображения */
-    height: auto; /* Автоматическая высота */
+    width: 80px; 
+    height: auto; 
     object-fit: cover;
     border-radius: 5px;
     margin-bottom: 10px;
