--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -4,6 +4,7 @@
     text-align: center;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 40px;
+    color:#393939
 }
 
 .orange-text {
@@ -53,20 +54,70 @@
     margin-top: 20px;
 }
 
+.second-artworks-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
 .second-artwork {
+    flex: 0 0 calc(33.33% - 20px);
     margin: 10px;
-    width: calc(33.33% - 20px); 
-    padding: 10px;
-    box-sizing: border-box;
-    text-align: center; 
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
 .second-artwork img {
     width: 150px;
-    height: 150px; 
+    height: 150px;
     object-fit: cover;
-    border-radius: 5px;
-    margin-bottom: 10px;
+    border-radius: 10px 0 0 10px;
+}
+
+.second-artwork-content {
+    flex: 1;
+    padding: 20px;
+}
+
+.second-artwork h3 {
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: #393939;
+}
+
+.second-artwork p {
+    font-size: 14px;
+    color: #666;
+}
+
+.favorite-icon {
+    width: 50px; 
+    height: 50px;
+    background-color: #F9F9F9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.favorite-icon img {
+    width: 70%;
+    height: 70%;
+    object-fit: contain;
+}
+.favorite-icon img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
 
 .artwork {
@@ -95,6 +146,15 @@
     height: 387px;
     border-radius: 10px;
     margin-bottom: 10px;
+    &:last-child {
+        width: 20px; 
+        height: auto; 
+        object-fit: cover;
+        border-radius: 5px;
+        margin-bottom: 10px;
+        cursor: pointer;
+
+    }
 }
 
 .artwork h3 {
