--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -15,3 +15,13 @@
     padding-right: 180px;
     padding-left: 180px;
 }
+@media only screen and (max-width: 360px) {
+    .footer-wrapper {
+        flex-direction: column; /* Вертикальное расположение элементов */
+        padding: 10px; /* Уменьшение отступов */
+    }
+
+    .mainfooter {
+        height: auto; /* Автоматическая высота */
+    }
+}
