--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -35,3 +35,13 @@
     margin-right: 10px; 
 }
 
+@media only screen and (max-width: 360px) {
+    .header-wrapper {
+        flex-direction: column; /* Вертикальное расположение элементов */
+        padding: 10px; /* Уменьшение отступов */
+    }
+
+    .image-button {
+        padding: 5px; /* Уменьшение отступов */
+    }
+}
