--- a/src/components/page/favorite/favorite.css
+++ b/src/components/page/favorite/favorite.css
@@ -36,3 +36,14 @@
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
+@media only screen and (max-width: 360px) {
+    .favorites-container {
+        flex-direction: column; /* Вертикальное расположение элементов */
+        padding: 20px; /* Уменьшение отступов */
+    }
+
+    .favorite-artwork {
+        width: 100%; /* Полная ширина для картин */
+    }
+}
