--- a/src/components/page/favorite/favorite.css
+++ b/src/components/page/favorite/favorite.css
@@ -4,6 +4,14 @@
     color: #393939;
 }
 
+.sby{
+    color:#E0A449;
+}
+
+.yfl{
+    color:#393939
+}
+
 .list {
     text-align: center;
     padding: 30px;
